--- a/index.html
+++ b/index.html
@@ -923,7 +923,7 @@ h1 {
                 `).join('');
                 tableHtml += `
                     <tr class="category-header">
-                        <td colspan="3">Чатов в час</td>
+                        <td colspan="3">Количество чатов в час</td>
                     </tr>
                 `;
                 const chatsPerHourRanges = [
