--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@ h1 {
                 `).join('');
                 tableHtml += `
                     <tr class="category-header">
-                        <td colspan="3">Средний балл</td>
+                        <td colspan="3">Средний балл по чатам</td>
                     </tr>
                 `;
                 const scoreRanges = [
