--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Калькулятор зарплаты</title>
+    <link rel="icon" href="https://iili.io/3i4SMrB.png"/>
     <style>
         * {
             margin: 0;
